Fixed problem with input and bootstrap on smaller windows. Fixed problem with create and load chat.

--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -143,7 +143,10 @@
     border-style: solid;
     border-width: 13px 13px 0 0;
     border-color: whitesmoke transparent transparent transparent;           
-}  
+}
+.sendMsg{
+    left: 100px;
+}
 input:focus{
     outline: none;
 }        
